Angular-#57-Interceptor-logger

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
+  
     <div class="row">
         <div class="col-6">      
-            <button type="submit" class="btn btn-primary" (click)="submitUsersData()">Submit the post data by service itself</button>
-                
+             <button class="btn btn-primary" (click) = "submitUsersData()">Start Post Request</button>
         </div>
 
         <!-- Display the user records from backend - get request  -->
