--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,50 @@
-<div class="container">
-  
-    <div class="row">
-       <div class="col-6">
-        <div class="row">
-            <div class="col-12"> <button class="btn btn-primary" (click)="submitUsersData()">Start Post Request</button>&nbsp;
-                <button class="btn btn-primary"[routerLink]="['http-logger']">Click here to go Http Logger Component</button> </div>
+<div class="alert alert-success" role="alert" *ngIf="isFormSubmittedSuccessfully">
+  <h4 class="alert-heading">User Data is Submitted</h4>
+</div>
 
-            <div class="col-12 p-0">
+<form #userForm="ngForm" (ngSubmit)="submitUserDetail(userForm)">
 
-                <router-outlet></router-outlet>
-            </div>
-
-        </div>
-       
-       </div>
-
-        <!-- Display the user records from backend - get request  -->
-        <div class="col-6">
-            <div class="row">
-                <div class="col-6 p-4" *ngFor="let user of userData">
-                    <div class="card">
-                        <img class="p-3" src="/assets/users.png" alt="Card image cap" width="150px" height="150px">
-                        <div class="card-body">
-                            <p>User Id : {{user._id}}</p>
-                            <p>User Role : {{user.role}}</p>
-                            <p>Name : {{user.name}}</p>
-                            <p>Email : {{user.email}}</p>
-                            <p class="card-text">The role of {{user.name}} is {{user.role}}</p>
-                            <!-- <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
+    <div class="row p-4">
+      <div class="form-group col-md-6">
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email" [(ngModel)]="userFormInput.email"  name="email" required
+        minlength="5"  #email="ngModel"
+        >
+        <span *ngIf="userForm.form.controls['email']?.touched && userForm.form.controls['email']?.hasError('required')" class="text-danger">
+          Name is Required
+        </span>
+        <span *ngIf="email.touched && userForm.form.controls['email']?.hasError('minlength')" class="text-danger">
+          Name  minimum length should be 5 character
+        </span>
+      </div>
+      <div class="form-group col-md-6">
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Password" [(ngModel)]="userFormInput.password" name="password"
+        required>
+        <span *ngIf="userForm.form.controls['password']?.touched && userForm.form.controls['password']?.hasError('required')" class="text-danger">
+          Name is Required
+        </span>
+      </div>
     </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" [(ngModel)]="userFormInput.address" name="address" required>
+      <span *ngIf="userForm.form.controls['address']?.touched && userForm.form.controls['address']?.hasError('required')" class="text-danger">
+        Name is Required
+      </span>
+    </div>
+   
+    <div class="row  p-4">
+      <div class="form-group col-md-6">
+        <input type="text" class="form-control" id="inputCity" placeholder="city" [(ngModel)]="userFormInput.city" name="city" required>
+        <span *ngIf="userForm.form.controls['city']?.touched && userForm.form.controls['city']?.hasError('required')" class="text-danger">
+          Name is Required
+        </span>
+      </div>
 
+      <div class="form-group col-md-2">
+        <input type="text" class="form-control" id="inputZip" placeholder="zip" [(ngModel)]="userFormInput.zip" name="zip" required>
+        <span *ngIf="userForm.form.controls['zip']?.touched && userForm.form.controls['zip']?.hasError('required')" class="text-danger">
+          Name is Required
+        </span>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!userForm.form.valid" >Sign in</button>
+  </form>
