--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,20 @@
 <p>DashBoard</p>
 <p><button (click)="logout()">Logout</button></p>
 <div *ngIf="userDetails.length" class="border">
-    <p>Role : {{userDetails[0].role}}</p>
-    <p>Id : {{userDetails[0].id}}</p>
-    <p>Name : {{userDetails[0].name}}</p>
-    <p>email : {{userDetails[0].email}}</p>
+
+    <div class="row">
+        <div class="col-6">
+            <p>Role : {{userDetails[0].role}}</p>
+            <p>Id : {{userDetails[0].id}}</p>
+            <p>Name : {{userDetails[0].name}}</p>
+            <p>email : {{userDetails[0].email}}</p>
+        </div>
+
+        <div class="col-6">
+            <p>Role Fetched in Resolve Guard :</p> <h4>{{role}}</h4>
+        </div>
+    </div>
+
 
 </div>
 <div class="border" *ngIf="userDetails[0].isPremimumUser">
@@ -12,10 +22,10 @@
     <button class="btn btn-sm btn-dark" [routerLink]="['user-task']">Show UserTask</button> &nbsp; <br>
     <hr />
 
-    <button class="btn btn-sm btn-dark" [routerLink]="['user-prime-feature']"
-     *ngIf="userDetails[0].isPrimeUser">Show Prime Features 1 [Module]</button> &nbsp;
+    <button class="btn btn-sm btn-dark" [routerLink]="['user-prime-feature']" *ngIf="userDetails[0].isPrimeUser">Show
+        Prime Features 1 [Module]</button> &nbsp;
     <button class="btn btn-sm btn-dark" [routerLink]="['user-prime-feature/user-prime-feature2']"
-    *ngIf="userDetails[0].isPrimeUser">Show Prime Features 2 [Module]</button>
+        *ngIf="userDetails[0].isPrimeUser">Show Prime Features 2 [Module]</button>
 </div>
 
 <router-outlet></router-outlet>
